--- a/Css/style.css
+++ b/Css/style.css
@@ -1,3 +1,12 @@
 .text-justify{
     text-align: justify;
 }
+#text{
+    display: flex;
+    list-style: none;
+    animation: scrolling 8s linear infinite;
+}
+@keyframes scrolling{
+    0% { transform: translatex(0) }
+    100% { transform: translatex(-100%) } 
+}
